infra/k8s/base/network-policies/02-allow-egress-within-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-within-namespace
  namespace: food-delivery
  labels:
    app.kubernetes.io/name: allow-egress-within-namespace
    app.kubernetes.io/part-of: food-delivery
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector: {}
