infra/k8s/base/network-policies/ingress-config.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-config-http
  namespace: food-delivery
  labels:
    app.kubernetes.io/name: ingress-config-http
    app.kubernetes.io/part-of: food-delivery
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: config
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/part-of: food-delivery
      ports:
        - protocol: TCP
          port: 3008
