infra/k8s/base/network-policies/ingress-grpc.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-catalog-grpc
  namespace: food-delivery
  labels:
    app.kubernetes.io/name: ingress-catalog-grpc
    app.kubernetes.io/part-of: food-delivery
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: catalog
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: order
      ports:
        - protocol: TCP
          port: 50051
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-inventory-grpc
  namespace: food-delivery
  labels:
    app.kubernetes.io/name: ingress-inventory-grpc
    app.kubernetes.io/part-of: food-delivery
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: inventory
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: order
      ports:
        - protocol: TCP
          port: 50052
